# sqs-polling

./: LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  __version__.txt  bandit.yaml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  renovate.json  requirements.txt  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS
.github/workflows/: ci-cd.yaml  test.yaml
example/: execute_error.py  fastapi_example.py  heartbeet_error.py  simple.py  simple_fifo.py  simple_fifo_dlq.py  test.py
sqs_polling/: __init__.py  __main__.py  __version__.py  exceptions.py  execute_result.py  handler.py  main.py  polling.py  signal.py  types.py  utils.py
tools/: localstack.sh  start-command.sh
