[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

# blackはsetup.cfgに対応していないためこのファイルで設定する

[tool.black]
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | __pychache__
  )/
)
'''

[tool.pyright]
exclude = [
  "**/__pycache__",
  "**/.*",
]
ignore = [
]
venvPath = "."
venv = ".venv"

[tool.setuptools_scm]
version_file = "sqs_polling/__version__.py"
